--- a/app/src/main/res/layout/activity_add_place.xml
+++ b/app/src/main/res/layout/activity_add_place.xml
@@ -3,57 +3,97 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="20dp"
+    android:background="#F7F7F7">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp">
+
+        <TextView
+            android:id="@+id/titleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="놀러가자!"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"/>
+
+        <Button
+            android:id="@+id/btnSave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="저장"
+            android:textColor="#3B5998"
+            android:background="@android:color/transparent"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:padding="0dp"
+            android:minWidth="0dp"
+            android:minHeight="0dp"/>
+    </RelativeLayout>
 
     <EditText
         android:id="@+id/editTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="제목"/>
+        android:hint="제목"
+        android:padding="10dp"
+        android:layout_marginBottom="10dp"/>
 
     <EditText
         android:id="@+id/editDesc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="한줄 소개"/>
+        android:hint="한줄 소개"
+        android:padding="10dp"
+        android:layout_marginBottom="10dp"/>
 
     <EditText
         android:id="@+id/editLocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="위치"/>
+        android:hint="위치"
+        android:padding="10dp"
+        android:layout_marginBottom="10dp"/>
 
     <EditText
         android:id="@+id/editDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="상세 내용"/>
+        android:hint="상세 내용"
+        android:padding="10dp"
+        android:layout_marginBottom="10dp"
+        android:gravity="top"
+        android:minLines="4"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
 
         <ImageView
+            android:id="@+id/imageCamera"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/ic_gallery"
-            android:contentDescription="카메라"/>
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="150dp"
             android:layout_weight="1"
             android:src="@drawable/ic_camera"
-            android:contentDescription="갤러리"/>
+            android:scaleType="centerCrop"
+            android:padding="10dp"/>
+
+        <ImageView
+            android:id="@+id/imageGallery"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_gallery"
+            android:scaleType="centerCrop"
+            android:padding="10dp"
+            android:layout_marginStart="10dp"/>
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/btnSave"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="저장"/>
 
 </LinearLayout>
