--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- res/values/colors.xml -->
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="blue_selected">#4E4EF9</color> <!-- 선택된 상태의 파란색 -->
+    <color name="gray_unselected">#A9A9B5</color> <!-- 선택되지 않은 상태의 회색 -->
 </resources>
